--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="title_activity_user">UserActivity</string>
+    <string name="title_home">首页</string>
+    <string name="title_dashboard">订单</string>
+    <string name="title_notifications">个人中心</string>
 </resources>
